RESOLVED FIXED238435
[WebGPU] etc2-rgba8unorm and etc2-rgba8unorm-srgb are not handled
https://bugs.webkit.org/show_bug.cgi?id=238435
Summary [WebGPU] etc2-rgba8unorm and etc2-rgba8unorm-srgb are not handled
Myles C. Maxfield
Reported 2022-03-27 21:39:11 PDT
.
Attachments
Patch (2.87 KB, patch)
2022-03-27 21:41 PDT, Myles C. Maxfield
no flags
Patch (3.08 KB, patch)
2022-03-28 12:25 PDT, Myles C. Maxfield
no flags
Patch (3.17 KB, patch)
2022-03-31 02:09 PDT, Myles C. Maxfield
dino: review+
Myles C. Maxfield
Comment 1 2022-03-27 21:41:04 PDT
Myles C. Maxfield
Comment 2 2022-03-28 12:25:18 PDT
Myles C. Maxfield
Comment 3 2022-03-31 02:09:17 PDT
Myles C. Maxfield
Comment 4 2022-03-31 22:09:54 PDT
Radar WebKit Bug Importer
Comment 5 2022-03-31 22:10:17 PDT
Note You need to log in before you can comment on or make changes to this bug.