[WebGPU] etc2-rgba8unorm and etc2-rgba8unorm-srgb are not handled https://bugs.webkit.org/show_bug.cgi?id=238435

Reviewed by Dean Jackson.

They map to MTLPixelFormatEAC_RGBA8 and MTLPixelFormatEAC_RGBA8_sRGB.

* WebGPU/Texture.mm:
(WebGPU::pixelFormat):
(WebGPU::Device::createTexture):


Canonical link: https://commits.webkit.org/249106@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@292203 268f45cc-cd09-0410-ab3c-d52691b4dbfc